fix some not responsive add more thumbnail in projects highlights

--- a/my-portfolio/src/sections/Projects/Projects.css
+++ b/my-portfolio/src/sections/Projects/Projects.css
@@ -28,22 +28,28 @@
   .projects-card {
     width: 350px;
     max-width: 350px;
-    height: 500px;
+    height: 550px;
     background-color: white;
     box-shadow: 0 3px 10px rgb(0,0,0,0.2);
     border-radius: 10px;
     padding: 20px;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    overflow: hidden;
   }
   
   .projects-card-head {
     width: 100%;
+    max-height: 50px;
     display: flex;
-    align-items: end;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    gap: 10px;
     margin-bottom: 10px;
+    text-align: center;
+    flex: 1;
   }
   
   .projects-card-head h3 {
@@ -60,6 +66,7 @@
   .image-container {
     width: 100%;
     height: 200px;
+    min-height: 200px;
     border-radius: 5px;
     overflow: hidden;
     border: 1px solid gray;
@@ -67,12 +74,18 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    flex: 1;
   }
   
   .image-thumbnail {
     width: 100%;
     height: 100%;
     position: absolute;
+    transition: transform 0.5s ease-in-out;
+  }
+
+  .image-thumbnail:hover {
+    transform: scale(1.1);
   }
   
   .projects-card-technology-list {
@@ -108,6 +121,14 @@
   .projects-card-description b {
     font-family: bold;
     font-size: 1rem;
+  }
+
+  .projects-card-details {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
   }
   
   .projects-card-details button {
